add link to stylesheet

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Canned - serve canned responses to mock an api, based on files in a folder</title>
-    <link type="text/css" rel="stylesheet" media="screen" href="{{ site.path }}/style.css">
+    <link type="text/css" rel="stylesheet" media="screen" href="{{ site.path }}/stylesheets/style.css">
   </head>
   <body>
     {{ content }}
